<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ViewGroupTheme"
    tools:context=".view.fragments.ProfileFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ptofile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/TitleTextView"
        android:text="@string/profile" />

    <TextView
        android:id="@+id/subtitle_profile_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SubtitleTextView"
        android:text="@string/surname" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ProfileIcon"
            android:src="@drawable/ic_person_outline_24px" />

        <TextView
            android:id="@+id/surname_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/InformationTextView"/>
    </LinearLayout>

    <TextView
        android:id="@+id/subtitle_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SubtitleTextView"
        android:text="@string/name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ProfileIcon"
            android:src="@drawable/ic_person_outline_24px" />

        <TextView
            android:id="@+id/name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/InformationTextView"/>
    </LinearLayout>

    <TextView
        android:id="@+id/subtitle_profile_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SubtitleTextView"
        android:text="@string/phone_number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ProfileIcon"
            android:src="@drawable/ic_phone_iphone_24px" />

        <TextView
            android:id="@+id/phone_number_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/InformationTextView"/>
    </LinearLayout>
</LinearLayout>